# object_and_person_recognition

detection_and_tracking/: package.xml  setup.cfg  setup.py
detection_and_tracking/detection_and_tracking/: configs.py  detection_and_tracking_node.py  mapper.py  message_builders.py  pose_estimation_node.py  yolov8.py
recognition_msgs/: CMakeLists.txt  package.xml
recognition_msgs/msg/: Object.msg  Person.msg  Persons.msg  Pose.msg  Poses.msg  RecogResult.msg
