<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>detection_and_tracking</name>
  <version>1.0.0</version>
  <description>A 3D object detection and tracking using a realsense</description>
  <maintainer email="yasutomo57jp@gmail.com">kawanishi</maintainer>
  <license>AGPL-3.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <build_depend>recognition_msgs</build_depend>
  <build_export_depend>recognition_msgs</build_export_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
